# speechify

./: .gitignore  main.py  pyproject.toml  readme.md  req.txt
backend/: database.py
models/: base.py  main.py
routers/: ocr_router.py  tts_router.py
schema/: base_schema.py
service/: base_service.py
